<resources>
    <string name="app_name">LoginUIAndroid</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label">Label</string>
    <string name="hint_username">Username</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_login">LOGIN</string>
    <string name="hint_email_example_com">email@example.com</string>
    <string name="hint_password">password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="text_register">REGISTER</string>
    <string name="hint_your_name">Your Name</string>
    <string name="text_repassword">Re-Password</string>
    <string name="starting">Starting..</string>
</resources>
