<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:animateLayoutChanges="true"
        android:padding="10dp"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/primary_light"
            android:text="@string/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <FrameLayout
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:id="@+id/fmEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

        <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_example_com"
                android:background="@drawable/bg_input_layout"
                android:gravity="center_vertical"
                android:padding="10dp"/>

        <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/text_email"
                android:background="@color/colorPrimary"
                android:textColor="@color/primary_light"
                android:textSize="14sp"/>
    </FrameLayout>
    <FrameLayout
            android:id="@+id/fmPassword"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

        <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:background="@drawable/bg_input_layout"
                android:gravity="center_vertical"
                android:padding="10dp"/>

        <TextView
                android:id="@+id/labelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/text_password"
                android:background="@color/colorPrimary"
                android:textColor="@color/primary_light"
                android:textSize="14sp"/>
    </FrameLayout>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <Button
            android:text="@string/text_login"
            android:id="@+id/btnLogin"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/primary_light"
            app:layout_constraintBottom_toTopOf="@+id/txtRegistration"
            android:background="@drawable/bg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/don_t_have_an_account"
            android:id="@+id/txtRegistration"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>