<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:animateLayoutChanges="true"
        android:padding="10dp"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageButton
            android:id="@+id/btnClose"
            android:src="@drawable/ic_cancel"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/labelRegister"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/fmUsername"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/primary_light"
            android:text="@string/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <FrameLayout
            app:layout_constraintTop_toBottomOf="@+id/labelRegister"
            android:id="@+id/fmUsername"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

        <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_your_name"
                android:background="@drawable/bg_input_layout"
                android:gravity="center_vertical"
                android:padding="10dp"/>

        <TextView
                android:id="@+id/labelUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/text_username"
                android:background="@color/colorPrimary"
                android:textColor="@color/primary_light"
                android:textSize="14sp"/>
    </FrameLayout>

    <FrameLayout
            app:layout_constraintTop_toBottomOf="@+id/fmUsername"
            android:id="@+id/fmEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

        <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_example_com"
                android:background="@drawable/bg_input_layout"
                android:gravity="center_vertical"
                android:padding="10dp"/>

        <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/text_email"
                android:background="@color/colorPrimary"
                android:textColor="@color/primary_light"
                android:textSize="14sp"/>
    </FrameLayout>
    <FrameLayout
            android:id="@+id/fmPassword"
            app:layout_constraintTop_toBottomOf="@+id/fmEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

        <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:background="@drawable/bg_input_layout"
                android:gravity="center_vertical"
                android:padding="10dp"/>

        <TextView
                android:id="@+id/labelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/text_password"
                android:background="@color/colorPrimary"
                android:textColor="@color/primary_light"
                android:textSize="14sp"/>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/fmRePassword"
            app:layout_constraintTop_toBottomOf="@+id/fmPassword"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

        <EditText
                android:id="@+id/edtRePassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:background="@drawable/bg_input_layout"
                android:gravity="center_vertical"
                android:padding="10dp"/>

        <TextView
                android:id="@+id/labelRePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/text_repassword"
                android:background="@color/colorPrimary"
                android:textColor="@color/primary_light"
                android:textSize="14sp"/>
    </FrameLayout>

    <Button
            android:text="@string/text_register"
            android:id="@+id/btnRegister"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primary_light"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>